bk_ida/gobmkida/g1/do_compute_effective_worm_sizes
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_compute_effective_worm_sizes/src/engine/worm.c:1077:16: error: use of undeclared identifier 'unk_A49554'
v6 = ( char *)&unk_A49554 + 4 * ( unsigned int)( 2 * board_size - 3); 
               ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_compute_effective_worm_sizes/src/engine/worm.c:1078:16: error: use of undeclared identifier 'unk_A49550'
v7 = ( char *)&unk_A49550; 
               ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_compute_effective_worm_sizes/src/engine/worm.c:1120:17: error: use of undeclared identifier 'unk_A49550'
v19 = ( char *)&unk_A49550; 
                ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_compute_effective_worm_sizes/src/engine/worm.c:1156:1: error: use of undeclared identifier 'worms_2'
worms_2[( int)v20][v13] = worms_2[0][v12 + v18]; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_compute_effective_worm_sizes/src/engine/worm.c:1156:27: error: use of undeclared identifier 'worms_2'
worms_2[( int)v20][v13] = worms_2[0][v12 + v18]; 
                          ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_compute_effective_worm_sizes/src/engine/worm.c:1162:28: error: use of undeclared identifier 'worms_2'
while ( *( _DWORD *)v14 != worms_2[0][v12 + v18] ) 
                           ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_compute_effective_worm_sizes/src/engine/worm.c:1165:23: error: use of undeclared identifier 'unk_A48984'
if ( v14 == ( char *)&unk_A48984 + 144 * v20 + 4 * ( unsigned int)( v13 - 1) ) 
                      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_compute_effective_worm_sizes/src/engine/worm.c:1200:7: error: use of undeclared identifier 'worms_2'
v28 = worms_2[0][j + v24]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_compute_effective_worm_sizes/src/engine/worm.c:1237:12: error: use of undeclared identifier 'worms_2'
v21[v33] = worms_2[0][v33 + v22]; 
           ^
9 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_compute_effective_worm_sizes/src/obj/1/worm.o] Error 1
